made changes and completed the awc